<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="inz.maptest.Menu"
    tools:showIn="@layout/activity_menu">

    <Button
        android:id="@+id/button_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="onMapClick"
        android:text="Map"
        android:visibility="invisible" />

    <Button
        android:text="Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onSettingsClick"
        android:visibility="invisible"
        android:id="@+id/button_settings" />

    <Button
        android:text="Start Jade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onStartClick"
        android:id="@+id/button_start"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_map"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_name_hint"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <EditText
        android:id="@+id/edit_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_name"
        android:layout_alignStart="@+id/edit_name"
        android:layout_below="@+id/edit_name"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_ip_hint"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/edit_name"
        android:text="@string/view_name_val" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/edit_ip"
        android:text="@string/view_ip_val" />

    <EditText
        android:id="@+id/edit_host_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view_name"
        android:layout_alignLeft="@+id/edit_name"
        android:layout_alignStart="@+id/edit_name"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_host_name_hint"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/edit_host_name"
        android:text="@string/view_host_name_val" />

    <EditText
        android:id="@+id/showGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:visibility="invisible"
        android:layout_below="@+id/edit_ip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
